<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout_light_mode"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_mode"
    android:orientation="vertical"
    tools:context=".MainActivityLightMode">

    <TextView
        android:id="@+id/theme_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:text="@string/theme"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/themeRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/theme_text_view"
        android:layout_marginTop="2dp">

        <RadioButton
            android:id="@+id/light_mode_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/light_mode"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/dark_mode_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:text="@string/dark_mode"
            android:textColor="@color/brown"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/notifications_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/themeRadioGroup"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/notifications"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/push_notification_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notifications_text_view"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/allow_push_notifications"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profile_details_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/push_notification_check_box"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/profile_details"
        android:textColor="@color/orange"
        android:textSize="23sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/profile_details_text_view"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/brown"
        android:textColorHint="@color/brown"
        android:textSize="20sp"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/nickname_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/email_address_edit_text"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/nickname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/brown"
        android:textColorHint="@color/brown"
        android:textSize="20sp"
        tools:ignore="Autofill,RtlSymmetry,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/nickname_edit_text"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

</RelativeLayout>